# Project_Euler

./: .gitignore  CMakeLists.txt  README.md
cmake/: UpdateSubmodules.cmake  generate_test_main.cmake
solution/: CMakeLists.txt  solution1.cpp  solution2.cpp
solution/headers/: solution1.h  solution2.h
test/: CMakeLists.txt  test_solution1.cpp  test_solution2.cpp
